welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: not found: type In
  var e2:In=math.abs(b-10)
         ^close10:8: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (e1=e2){
               ^